--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,16 +11,20 @@ services:
       - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
     volumes:
       - db:/var/lib/mysql
+
     networks:
-      - mynetwork
+      - test_mynetwork
   app:
     depends_on:
       - mysqldb
-    build: ./tutorial-app
-
+    build: ./tutorial-app\
+    networks:
+      - test_mynetwork
     env_file: ./.env
     ports:
       - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     environment:
       SPRING_APPLICATION_JSON: '{
         "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
@@ -31,14 +35,8 @@ services:
       }'
     volumes:
       - .m2:/root/.m2
-    networks:
-      - mynetwork
-    stdin_open: true
-    tty: true
-
 volumes:
   db:
-
 networks:
-  mynetwork:
+  test_mynetwork:
     external: true
