--- a/test-app/test-docker-compose.yml
+++ b/test-app/test-docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+ersion: "3.8"
 
 services:
   test:
@@ -10,4 +10,4 @@ services:
 
 networks:
   mynetwork:
-    external: true
+    driver: bridge
